--- a/maehiosz-750.css
+++ b/maehiosz-750.css
@@ -120,6 +120,8 @@ footer{
     font-size: 15px;
     padding:3px;
     transform: translate(-50%,-50%);
+    text-align:center;
+    width:290px;
   }
 
   .online-link-ct  :hover{
